--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,1 +1,30 @@
-<p>inicio works!</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>CALCULADORA</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <img id="logo" src="logo.png" alt="Logo de la calculadora">
+
+    <h1 id="titulo">CALCULADORA</h1>
+
+    <form>
+        <label for="email" id="email-label">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required><br>
+    
+        <label for="password" id="password-label">Contraseña:</label>
+        <input type="password" id="password" name="password" required><br>
+    
+        <div id="button-container">
+            <div id="button-group">
+                <button type="submit" id="login-button">Iniciar Sesión</button>
+                <button type="submit" id="register-button">Registrarse Aquí</button>
+            </div>
+            <br> 
+            <a id="forgot-password-link" href="#">Has olvidado tu contraseña?</a>
+        </div>
+    </form>
+</body>
+</html>
