feat: implemented input-data-evaluation

--- a/src/app/input-data-evaluation/input-data-evaluation.component.html
+++ b/src/app/input-data-evaluation/input-data-evaluation.component.html
@@ -1,1 +1,70 @@
-<p>input-data-evaluation works!</p>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Registro General</title>
+    <link rel="stylesheet" type="text/css" href="input-data-evaluation.component.css">
+</head>
+<body>
+<div class="container">
+    <h1>Registro General</h1>
+    <form>
+        <h2>Datos de entrada</h2>
+        <div class="input-row">
+            <label for="vehicleValue">Valor de Vehículo:</label>
+            <input type="text" id="vehicleValue" name="vehicleValue" required>
+        </div>
+
+        <div class="input-row">
+            <label for="initialPayment">Cuota Inicial:</label>
+            <input type="text" id="initialPayment" name="initialPayment" required>
+        </div>
+
+        <div class="input-row">
+            <label for="loanAmount">Monto de Préstamo:</label>
+            <input type="text" id="loanAmount" name="loanAmount" required>
+        </div>
+
+        <div class="input-row">
+            <label for="annualInterestRate">Tasa Efectiva Anual:</label>
+            <input type="text" id="annualInterestRate" name="annualInterestRate" required>
+        </div>
+
+        <div class="input-row">
+            <label for="paymentsPerYear">Cuotas al Año:</label>
+            <input type="text" id="paymentsPerYear" name="paymentsPerYear" required>
+        </div>
+
+        <div class="input-row">
+            <label for="paymentPeriod">Periodo de Pago:</label>
+            <input type="text" id="paymentPeriod" name="paymentPeriod" required>
+        </div>
+
+        <div class="input-row">
+            <label for="individualLifeInsuranceRate">Tasa de Seguro de Desgravamen Individual:</label>
+            <input type="text" id="individualLifeInsuranceRate" name="individualLifeInsuranceRate" required>
+        </div>
+
+        <div class="input-row">
+            <label for="vehicleInsuranceRate">Tasa de Seguro Vehicular Anual:</label>
+            <input type="text" id="vehicleInsuranceRate" name="vehicleInsuranceRate" required>
+        </div>
+
+        <div class="input-row">
+            <label for="physicalStatementDelivery">Envío Físico de Estado de Cuenta:</label>
+            <input type="text" id="physicalStatementDelivery" name="physicalStatementDelivery" required>
+        </div>
+
+        <div class="button-container">
+            <button type="submit" class="button">Evaluar</button>
+            <button type="button" class="button">Salir</button>
+        </div>
+    </form>
+</div>
+</body>
+</html>
+
+
+
+
+
