feat: added logo.png

--- a/src/app/input-data-evaluation/input-data-evaluation.component.css
+++ b/src/app/input-data-evaluation/input-data-evaluation.component.css
@@ -47,3 +47,11 @@ input[type="text"] {
     border-radius: 10px;
     width: 30%;
 }
+.logo {
+    position: absolute;
+    top: 180px;
+    right: 600px;
+    width: 90px;
+    height: 90px;
+}
+
