--- a/src/app/input-data-evaluation/input-data-evaluation.component.html
+++ b/src/app/input-data-evaluation/input-data-evaluation.component.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="input-data-evaluation.component.css">
 </head>
 <body>
+<img src="logo.png" alt="Logo de la calculadora" class="logo">
 <div class="container">
     <h1>Registro General</h1>
     <form>
@@ -59,6 +60,7 @@
             <button type="submit" class="button">Evaluar</button>
             <button type="button" class="button">Salir</button>
         </div>
+
     </form>
 </div>
 </body>
