--- a/src/app/Components/registro-datos/registro-datos.component.html
+++ b/src/app/Components/registro-datos/registro-datos.component.html
@@ -1,1 +1,29 @@
-<p>registro-datos works!</p>
+<div class="container">
+    <div class="my-photo">
+        <img src="https://i.imgur.com/Lhdebjw.png" alt="Mi foto" class="my-photo-image">
+    </div>
+
+    <div class="title">Registro de datos </div>
+    <div class="form-group">
+        <label for="nombres" class="label-left">Nombres:</label> <br>
+        <input  type="text" class="form-control" id="nombres" required>
+    </div>
+    <div class="form-group">
+        <label for="apellidos" class="label-left">Apellidos:</label> <br>
+        <input  type="text" class="form-control" id="apellidos" required>
+    </div>
+    <div class="form-group">
+        <label for="dni" class="label-left">DNI:</label> <br>
+        <input type="text" class="form-control" id="dni" required>
+    </div>
+    <div class="form-group">
+        <label for="email" class="label-left">Correo electrónico:</label> <br>
+        <input  type="email" class="form-control" id="email" required>
+    </div>
+    <div class="form-group">
+        <label for="password" class="label-left">Contraseña:</label> <br>
+        <input type="password" class="form-control" id="password" required>
+    </div>
+    <button (click)="registrar()" class="btn btn-primary">Registrar</button> <br>
+    <button (click)="iniciarSesion()" class="btn btn-primary">Iniciar Sesión</button>
+</div>
