--- a/src/app/Components/cronograma/cronograma.component.html
+++ b/src/app/Components/cronograma/cronograma.component.html
@@ -1,5 +1,11 @@
 <div class = "grid-layout">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <div class ="table">
+        <div class = "titulo">
+            <h1>Cronograma de pagos</h1>
+        </div>
+
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+
 
         <ng-container matColumnDef="numeroPago">
             <th mat-header-cell *matHeaderCellDef> # </th>
@@ -14,46 +20,50 @@
 
         <ng-container matColumnDef="saldo">
             <th mat-header-cell *matHeaderCellDef> Saldo </th>
-            <td mat-cell *matCellDef="let element"> {{element.saldo}} </td>
+            <td mat-cell *matCellDef="let element"> S/ {{element.saldo}} </td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="interes">
             <th mat-header-cell *matHeaderCellDef> Interés </th>
-            <td mat-cell *matCellDef="let element"> {{element.interes}} </td>
+            <td mat-cell *matCellDef="let element"> S/ {{element.interes}} </td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="seguroDesg">
             <th mat-header-cell *matHeaderCellDef> Seguro desg </th>
-            <td mat-cell *matCellDef="let element"> {{element.seguro_desg}} </td>
+            <td mat-cell *matCellDef="let element"> S/ {{element.seguro_desg}} </td>
         </ng-container>
 
         <ng-container matColumnDef="seguroBien">
             <th mat-header-cell *matHeaderCellDef> Seguro bien </th>
-            <td mat-cell *matCellDef="let element"> {{element.seguro_bien}} </td>
+            <td mat-cell *matCellDef="let element">  S/ {{element.seguro_bien}} </td>
         </ng-container>
 
         <ng-container matColumnDef="amortizacion">
             <th mat-header-cell *matHeaderCellDef> Amortización </th>
-            <td mat-cell *matCellDef="let element"> {{element.amortizacion}} </td>
+            <td mat-cell *matCellDef="let element"> S/ {{element.amortizacion}} </td>
         </ng-container>
 
         <ng-container matColumnDef="estado">
-            <th mat-header-cell *matHeaderCellDef> Envio Fisico de
-            Estado de
-            Cuenta(*)</th>
+            <th mat-header-cell *matHeaderCellDef> Envio Fisico de Estado de Cuenta(*)</th>
             <td mat-cell *matCellDef="let element"> {{element.envio_fisico}} </td>
         </ng-container>
 
         <ng-container matColumnDef="cuota">
             <th mat-header-cell *matHeaderCellDef> Cuota </th>
-            <td mat-cell *matCellDef="let element"> {{element.cuota}} </td>
+            <td mat-cell *matCellDef="let element"> S/ {{element.cuota}} </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+        <button  class = "button" mat-raised-button color = "warn">
+            VOLVER
+        </button>
+
+    </div>
 </div>
 
 
