feat: registro-solicitud implemented

--- a/src/app/Components/registro-solicitud/registro-solicitud.component.html
+++ b/src/app/Components/registro-solicitud/registro-solicitud.component.html
@@ -22,7 +22,7 @@
             <div class="form-group">
                 <label class="labelText" for="payDay">Día de Pago:</label>
                 <br><br>
-                <input class="inputs" type="date" id="payDay" name="payDay" [(ngModel)]="formData.payDay" required>
+                <input class="inputs" type="number" id="payDay" name="payDay" [(ngModel)]="formData.payDay" required>
             </div>
             <br><br>
             <button type="submit" class="animated-button">Siguiente</button>
