--- a/src/app/input-data-evaluation/input-data-evaluation.component.css
+++ b/src/app/input-data-evaluation/input-data-evaluation.component.css
@@ -38,14 +38,20 @@ input[type="text"] {
     align-items: center;
 }
 
-.button {
+button{
+    height: 6vh;
     background-color: red;
-    color: black;
-    padding: 10px 20px;
-    border: none;
-    margin-top: 10px;
-    border-radius: 10px;
-    width: 30%;
+    border: black 1px solid;
+    border-radius: 10vh;
+    padding: 2vh;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Estilos para el botón al pasar el cursor sobre él */
+button:hover {
+    background-color: darkred;
 }
 .logo {
     position: absolute;
