--- a/src/app/Components/cronograma/cronograma.component.html
+++ b/src/app/Components/cronograma/cronograma.component.html
@@ -1,69 +1,66 @@
 <div class = "grid-layout">
-    <div class ="table">
-        <div class = "titulo">
-            <h1>Cronograma de pagos</h1>
-        </div>
-
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-
-        <ng-container matColumnDef="numeroPago">
-            <th mat-header-cell *matHeaderCellDef> # </th>
-            <td mat-cell *matCellDef="let element"> {{element.numero_pago}} </td>
-        </ng-container>
-
-        <!-- Name Column -->
-        <ng-container matColumnDef="fecha">
-            <th mat-header-cell *matHeaderCellDef> Fecha </th>
-            <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="saldo">
-            <th mat-header-cell *matHeaderCellDef> Saldo </th>
-            <td mat-cell *matCellDef="let element"> S/ {{element.saldo}} </td>
-        </ng-container>
-
-        <!-- Weight Column -->
-        <ng-container matColumnDef="interes">
-            <th mat-header-cell *matHeaderCellDef> Interés </th>
-            <td mat-cell *matCellDef="let element"> S/ {{element.interes}} </td>
-        </ng-container>
-
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="seguroDesg">
-            <th mat-header-cell *matHeaderCellDef> Seguro desg </th>
-            <td mat-cell *matCellDef="let element"> S/ {{element.seguro_desg}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="seguroBien">
-            <th mat-header-cell *matHeaderCellDef> Seguro bien </th>
-            <td mat-cell *matCellDef="let element">  S/ {{element.seguro_bien}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="amortizacion">
-            <th mat-header-cell *matHeaderCellDef> Amortización </th>
-            <td mat-cell *matCellDef="let element"> S/ {{element.amortizacion}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="estado">
-            <th mat-header-cell *matHeaderCellDef> Envio Fisico de Estado de Cuenta(*)</th>
-            <td mat-cell *matCellDef="let element"> {{element.envio_fisico}} </td>
-        </ng-container>
-
-        <ng-container matColumnDef="cuota">
-            <th mat-header-cell *matHeaderCellDef> Cuota </th>
-            <td mat-cell *matCellDef="let element"> S/ {{element.cuota}} </td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-        <button  class = "button" mat-raised-button color = "warn">
-            VOLVER
-        </button>
-
+    <div class = "titulo">
+        <h1>Cronograma de pagos</h1>
     </div>
+
+    <div class ="table">
+        <table mat-table [dataSource]="results" class="mat-elevation-z8" matSort>
+            <ng-container matColumnDef="numeroPago">
+                <th mat-header-cell *matHeaderCellDef> # </th>
+                <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
+            </ng-container>
+
+            <!-- Name Column -->
+            <ng-container matColumnDef="fecha">
+                <th mat-header-cell *matHeaderCellDef> Fecha </th>
+                <td mat-cell *matCellDef="let element"> {{element.fecha}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="saldo">
+                <th mat-header-cell *matHeaderCellDef> Saldo </th>
+                <td mat-cell *matCellDef="let element"> S/ {{element.saldo.toFixed(2)}} </td>
+            </ng-container>
+
+            <!-- Weight Column -->
+            <ng-container matColumnDef="interes">
+                <th mat-header-cell *matHeaderCellDef> Interés </th>
+                <td mat-cell *matCellDef="let element"> S/ {{element.interes.toFixed(2)}} </td>
+            </ng-container>
+
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="seguroDesg">
+                <th mat-header-cell *matHeaderCellDef> Seguro desg </th>
+                <td mat-cell *matCellDef="let element"> S/ {{element.seguroDesgravamen.toFixed(2)}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="seguroBien">
+                <th mat-header-cell *matHeaderCellDef> Seguro bien </th>
+                <td mat-cell *matCellDef="let element">  S/ {{element.seguroBien.toFixed(2)}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="amortizacion">
+                <th mat-header-cell *matHeaderCellDef> Amortización </th>
+                <td mat-cell *matCellDef="let element"> S/ {{element.amortizacion.toFixed(2)}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Envio Fisico de Estado de Cuenta(*)</th>
+                <td mat-cell *matCellDef="let element"> {{element.envioFisico}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="cuota">
+                <th mat-header-cell *matHeaderCellDef> Cuota </th>
+                <td mat-cell *matCellDef="let element"> S/ {{element.cuotaTotal.toFixed(2)}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+    </div>
+
+    <button  class = "button" mat-raised-button color = "warn">
+        VOLVER
+    </button>
 </div>
 
 
