--- a/src/app/Components/cronograma/cronograma.component.html
+++ b/src/app/Components/cronograma/cronograma.component.html
@@ -18,29 +18,29 @@
 
             <ng-container matColumnDef="saldo">
                 <th mat-header-cell *matHeaderCellDef> Saldo </th>
-                <td mat-cell *matCellDef="let element"> S/ {{element.saldo.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element"> {{currencySymbol}} {{element.saldo.toFixed(2)}} </td>
             </ng-container>
 
             <!-- Weight Column -->
             <ng-container matColumnDef="interes">
                 <th mat-header-cell *matHeaderCellDef> Interés </th>
-                <td mat-cell *matCellDef="let element"> S/ {{element.interes.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element"> {{currencySymbol}} {{element.interes.toFixed(2)}} </td>
             </ng-container>
 
             <!-- Symbol Column -->
             <ng-container matColumnDef="seguroDesg">
                 <th mat-header-cell *matHeaderCellDef> Seguro desg </th>
-                <td mat-cell *matCellDef="let element"> S/ {{element.seguroDesgravamen.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element"> {{currencySymbol}} {{element.seguroDesgravamen.toFixed(2)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="seguroBien">
                 <th mat-header-cell *matHeaderCellDef> Seguro bien </th>
-                <td mat-cell *matCellDef="let element">  S/ {{element.seguroBien.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element">  {{currencySymbol}} {{element.seguroBien.toFixed(2)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="amortizacion">
                 <th mat-header-cell *matHeaderCellDef> Amortización </th>
-                <td mat-cell *matCellDef="let element"> S/ {{element.amortizacion.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element"> {{currencySymbol}} {{element.amortizacion.toFixed(2)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="estado">
@@ -50,7 +50,7 @@
 
             <ng-container matColumnDef="cuota">
                 <th mat-header-cell *matHeaderCellDef> Cuota </th>
-                <td mat-cell *matCellDef="let element"> S/ {{element.cuotaTotal.toFixed(2)}} </td>
+                <td mat-cell *matCellDef="let element"> {{currencySymbol}} {{element.cuotaTotal.toFixed(2)}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -62,5 +62,3 @@
         VOLVER
     </button>
 </div>
-
-
