--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -4,25 +4,18 @@
     font-size: 50px;
 }
 
-#logo {
-    display: block;
-    margin: 0 auto;
-    margin-top: -10px;
-    width: 300px;
-}
-
 #email-label, #password-label {
     display: block;
     margin: 0 auto;
     text-align: center;
-    font-size: 25px;
+    font-size: 3vh;
 }
 
 #email, #password {
     display: block;
     margin: 0 auto;
     text-align: center;
-    font-size: 25px;
+    font-size: 3vh;
 }
 
 #button-container {
@@ -42,15 +35,13 @@
     padding: 10px 35px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 2vh;
     border-radius: 10px;
     white-space: nowrap;
 }
 
 body {
-    background-image: url('fondo3.png');
-    background-size:    cover;
-    background-repeat: no-repeat;
+    background-image: url('../../assets/background.jpg');
     display: flex;
     flex-direction: column; 
     justify-content: center;
@@ -64,8 +55,22 @@ body {
     padding: 10px 35px;
     border: none;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 2vh;
     border-radius: 10px;
     margin-right: 100px;
     white-space: nowrap;
+}
+.container{
+    background-color: white;
+    border: black 2px solid;
+    padding: 5vw;
+}
+.image{
+    background-image: url("logo.png");
+    width: 20vh;
+    height: 20vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-right: auto;
+    margin-left: auto;
 }
