--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -1,29 +1,23 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>CALCULADORA</title>
-</head>
+
 <body>
-    <img id="logo" src="logo.png" alt="Logo de la calculadora">
-
+<div class="container">
     <h1 id="titulo">CALCULADORA</h1>
-
+    <div class="image"></div>
     <form>
         <label for="email" id="email-label">Correo Electrónico:</label>
         <input type="email" id="email" name="email" required><br>
-    
+
         <label for="password" id="password-label">Contraseña:</label>
         <input type="password" id="password" name="password" required><br>
-    
+
         <div id="button-container">
             <div id="button-group">
-                <button type="submit" id="login-button">Iniciar Sesión</button>
-                <button type="submit" id="register-button">Registrarse Aquí</button>
+                <button type="submit" id="login-button" (click)="enterOnClick()">Iniciar Sesión</button>
+                <button type="submit" id="register-button" (click)="registerOnClick()">Registrarse Aquí</button>
             </div>
-            <br> 
+            <br>
             <a id="forgot-password-link" href="#">Has olvidado tu contraseña?</a>
         </div>
     </form>
+</div>
 </body>
-</html>
