--- a/src/app/Components/registro-datos/registro-datos.component.css
+++ b/src/app/Components/registro-datos/registro-datos.component.css
@@ -1,29 +1,36 @@
+
 .container {
     text-align: center;
     font-size: large;
     font-family: 'Arial', sans-serif;
+    background-image: url("../../assets/background.jpg");
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 5vh;
 }
 
 .btn {
-    width: 300px;
-    background-color: rgba(222, 139, 185, 0.84);
+    height: 6vh;
+    background-color: red;
+    border: black 1px solid;
+    border-radius: 10vh;
+    padding: 2vh;
     color: white;
-    font-size: larger;
-    padding: 10px;
-    border-radius: 10px;
-    margin-bottom: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
-
+.btn:hover {
+    background-color: darkred;
+}
 .my-photo {
     margin-bottom: 15px;
 }
 
 .my-photo-image {
     border-radius: 50%;
+    width: 50vh;
+    margin:  5vh;
 }
 
 .title {
@@ -34,8 +41,15 @@
 }
 
 .form-control {
-    width: 300px;
+    width: 30vh;
 }
 
 .label-left {
     text-align: left;}
+
+.content{
+    background-color: white;
+    border: black 1px solid;
+    margin-left: 30vh;
+    margin-right: 30vh;
+}
