--- a/src/app/Components/registro-datos/registro-datos.component.html
+++ b/src/app/Components/registro-datos/registro-datos.component.html
@@ -5,30 +5,30 @@
     </div>
 
     <div class="content">
-        <div class="title">Registro de datos </div>
+        <div class="title">Registro de datos</div>
         <div class="form-group">
             <label for="nombres" class="label-left">Nombres:</label> <br>
-            <input  type="text" class="form-control" id="nombres" required>
+            <input type="text" class="form-control" id="nombres" [(ngModel)]="nombres" required>
         </div>
         <div class="form-group">
             <label for="apellidos" class="label-left">Apellidos:</label> <br>
-            <input  type="text" class="form-control" id="apellidos" required>
+            <input type="text" class="form-control" id="apellidos" [(ngModel)]="apellidos" required>
         </div>
         <div class="form-group">
             <label for="dni" class="label-left">DNI:</label> <br>
-            <input type="text" class="form-control" id="dni" required>
+            <input type="text" class="form-control" id="dni" [(ngModel)]="dni" required>
         </div>
         <div class="form-group">
             <label for="email" class="label-left">Correo electrónico:</label> <br>
-            <input  type="email" class="form-control" id="email" required>
+            <input type="email" class="form-control" id="email" [(ngModel)]="email" required>
         </div>
         <div class="form-group">
             <label for="password" class="label-left">Contraseña:</label> <br>
-            <input type="password" class="form-control" id="password" required>
+            <input type="password" class="form-control" id="password" [(ngModel)]="password" required>
         </div>
         <button (click)="registrar()" class="btn btn-primary">Registrar</button> <br> <br>
         <button (click)="iniciarSesion()" class="btn btn-primary">Regresar</button>
-       <br> <br>
+        <br> <br>
     </div>
     <br> <br>
 </div>
