feat: updated project finally

--- a/src/app/Components/cronograma/cronograma.component.html
+++ b/src/app/Components/cronograma/cronograma.component.html
@@ -58,7 +58,7 @@
         </table>
     </div>
 
-    <button  class = "button" mat-raised-button color = "warn">
+    <button  class = "button" mat-raised-button color = "warn" (click)="Volver()">
         VOLVER
     </button>
 </div>
