--- a/src/app/Components/registro-solicitud/registro-solicitud.component.html
+++ b/src/app/Components/registro-solicitud/registro-solicitud.component.html
@@ -28,6 +28,6 @@
             <button type="submit" class="animated-button">Siguiente</button>
             <br><br>
         </form>
-        <button class="animated-button" >Regresar al inicio de sesion</button>
+        <button class="animated-button" (click)="RegresarInicio()">Regresar</button>
     </div>
 </div>
