feat: updated project

--- a/src/app/Components/registro-datos/registro-datos.component.html
+++ b/src/app/Components/registro-datos/registro-datos.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
     <div class="my-photo">
-        <img src="https://i.imgur.com/Lhdebjw.png" alt="Mi foto" class="my-photo-image">
+        <img src="https://cdn.discordapp.com/attachments/1145399219243450392/1177094103142506526/image.png?ex=6571414f&is=655ecc4f&hm=0a5bc25e63f63698f441cc375f90e9a89d3dd4ebfd23e831ca5d8531d63b1c41&" alt="Mi foto" class="my-photo-image">
     </div>
 
     <div class="content">
